# subscriptions/docs/swagger.json
@@ -18,14 +18,29 @@
                     "Subs"
                 ],
                 "summary": "Get subscriptions",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "format": "uint",
+                        "default": 1,
+                        "description": "Current page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "format": "uint",
+                        "default": 10,
+                        "description": "Number of subscriptions per page",
+                        "name": "size",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/schemas.FullSubInfo"
-                            }
+                            "$ref": "#/definitions/schemas.PaginationResponse"
                         }
                     },
                     "500": {
@@ -451,6 +466,51 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "schemas.Pagination": {
+            "type": "object",
+            "required": [
+                "has_next",
+                "has_prev",
+                "page_number",
+                "size",
+                "total_pages"
+            ],
+            "properties": {
+                "has_next": {
+                    "type": "boolean"
+                },
+                "has_prev": {
+                    "type": "boolean"
+                },
+                "page_number": {
+                    "type": "integer"
+                },
+                "size": {
+                    "type": "integer"
+                },
+                "total_pages": {
+                    "type": "integer"
+                }
+            }
+        },
+        "schemas.PaginationResponse": {
+            "type": "object",
+            "required": [
+                "pagination",
+                "subscriptions"
+            ],
+            "properties": {
+                "pagination": {
+                    "$ref": "#/definitions/schemas.Pagination"
+                },
+                "subscriptions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schemas.FullSubInfo"
+                    }
                 }
             }
         },
